# TP-Transferts-Thermique

./: .gitignore  links.txt
Analysis/: circuit.ipynb  visualise.ipynb  visualize.ipynb
Thermal-Simulation/: pyproject.toml
Thermal-Simulation/ThermSim/: __init__.py
Thermal-Simulation/ThermSim/cli/: run.py
Thermal-Simulation/ThermSim/display/: __init__.py  display.py
Thermal-Simulation/ThermSim/models/: __init__.py  lcm.py
